--- a/templates/500.html
+++ b/templates/500.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Page Not Found{% endblock %}
+{% block title %}Flasky - Internal_server_error{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Page Not Found</h1>
+    <h1>Internal Server Error</h1>
 </div>
 {% endblock %}
