--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,6 @@
 <p>
     New user?
     <a href="{{ url_for('auth.register') }}">
-        Click here to register
-
+        Click here to register.
     </a>
 </p>
