--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-    <!-- {% if not known %}
+    {% if not known %}
     <p>Pleased to meet you!</p>
-    {% endif %} -->
+    {% else %}
+    <Happy to see you again!</p>
+    {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
 {% endblock %}
