--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,3 +5,11 @@
     <li><a href=" {{ url_for('auth.login') }}">Log In</a></li>
     {% endif %}
 </ul>
+<!-- 
+{% if current_user.is_authenticated %}
+<li>
+    <a href="{{ url_for('main.user', username=current_user.username) }}">
+        Profile
+    </a>
+</li>
+{% endif %} -->
